<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Boss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="260dp"
        android:text="@string/Send_boss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Gainz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Send_Gainz"
        app:layout_constraintBaseline_toBaselineOf="@+id/Boss"
        app:layout_constraintEnd_toStartOf="@+id/Treasury"
        app:layout_constraintStart_toEndOf="@+id/Boss" />

    <Button
        android:id="@+id/Treasury"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/Send_items"
        app:layout_constraintBaseline_toBaselineOf="@+id/Gainz"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/LevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/Show_Level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Boss" />

    <TextView
        android:id="@+id/HealthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/Show_Health"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LevelText" />

    <TextView
        android:id="@+id/UpperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/Show_Skill1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HealthText" />

    <TextView
        android:id="@+id/LowerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/Show_Skill2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpperText" />

    <TextView
        android:id="@+id/CoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/Show_Skill3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LowerText" />

    <TextView
        android:id="@+id/EnduranceText"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/Show_Skill4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoreText" />

    <TextView
        android:id="@+id/StrengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:text="@string/Show_strength"
        app:layout_constraintBaseline_toBaselineOf="@+id/HealthText"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/LevelBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="16dp"
        android:progress="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/LevelText"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="237dp"
        android:layout_height="195dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="84dp"
        android:contentDescription="@string/character_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buffdude" />

    <TextView
        android:id="@+id/UpperValText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/UpperText"
        app:layout_constraintStart_toEndOf="@+id/UpperText" />

    <TextView
        android:id="@+id/CoreValText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/CoreText"
        app:layout_constraintStart_toEndOf="@+id/CoreText" />

    <TextView
        android:id="@+id/StrengthValText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/StrengthText"
        app:layout_constraintStart_toEndOf="@+id/StrengthText" />

    <TextView
        android:id="@+id/LowerValText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/LowerText"
        app:layout_constraintStart_toEndOf="@+id/LowerText" />

    <TextView
        android:id="@+id/EndurValText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/EnduranceText"
        app:layout_constraintStart_toEndOf="@+id/EnduranceText" />

    <ProgressBar
        android:id="@+id/UpperBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="229dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="16dp"
        android:progress="67"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/UpperValText"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/LowerBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="228dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:progress="33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/LowerValText"
        app:layout_constraintTop_toBottomOf="@+id/UpperBar" />

    <ProgressBar
        android:id="@+id/CoreBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="230dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:progress="90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toEndOf="@+id/CoreValText"
        app:layout_constraintTop_toBottomOf="@+id/LowerBar" />

    <ProgressBar
        android:id="@+id/EnduranceBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="233dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:progress="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/EndurValText"
        app:layout_constraintTop_toBottomOf="@+id/CoreBar" />

    <TextView
        android:id="@+id/TextLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/LevelText"
        app:layout_constraintStart_toEndOf="@+id/LevelText" />

    <TextView
        android:id="@+id/TextHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/HealthText"
        app:layout_constraintStart_toEndOf="@+id/HealthText" />

</androidx.constraintlayout.widget.ConstraintLayout>